--- a/app/src/main/res/drawable/common_white_border_radius_30_background.xml
+++ b/app/src/main/res/drawable/common_white_border_radius_30_background.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <stroke
-        android:width="0.5dp"
+        android:width="@dimen/dp_0_5"
         android:color="@color/white" />
-    <corners android:radius="30dp" />
+    <corners android:radius="@dimen/dp_30" />
 
 </shape>
