--- a/app/src/main/res/drawable/dialog_common_left_button_ackground.xml
+++ b/app/src/main/res/drawable/dialog_common_left_button_ackground.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <corners android:radius="30dp" />
+    <corners android:radius="@dimen/dp_30" />
     <stroke
-        android:width="0.5dp"
+        android:width="@dimen/dp_0_5"
         android:color="@color/app_main" />
 </shape>
