--- a/app/src/main/res/layout/activity_launcher.xml
+++ b/app/src/main/res/layout/activity_launcher.xml
@@ -20,7 +20,7 @@
         android:id="@+id/loginByEmailTv"
         style="@style/LoginTextView"
         android:layout_marginBottom="@dimen/dp_15"
-        android:background="@drawable/login_by_email"
+        android:background="@drawable/common_white_soild_radius_30_background"
         android:text="@string/login_by_email"
         android:textColor="@color/app_main"
         app:layout_constraintBottom_toTopOf="@id/loginByPhoneTv"
@@ -31,7 +31,7 @@
         android:id="@+id/loginByPhoneTv"
         style="@style/LoginTextView"
         android:layout_marginBottom="@dimen/dp_120"
-        android:background="@drawable/login_by_phone"
+        android:background="@drawable/common_white_border_radius_30_background"
         android:text="@string/login_by_phone"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
