--- a/app/src/main/res/layout/tiktok_item_layout.xml
+++ b/app/src/main/res/layout/tiktok_item_layout.xml
@@ -5,6 +5,13 @@
     android:layout_height="match_parent"
     android:background="@color/black">
 
+    <com.google.android.exoplayer2.ui.StyledPlayerView
+        android:id="@+id/exoPlayerView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@id/videoProgressBar"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/verticalGuideline"
         android:layout_width="match_parent"
@@ -30,8 +37,8 @@
         android:id="@+id/leftConstraint"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginEnd="@dimen/dp_20"
         android:layout_marginStart="@dimen/dp_10"
+        android:layout_marginEnd="@dimen/dp_20"
         android:layout_marginBottom="@dimen/dp_10"
         android:background="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -44,8 +51,8 @@
         android:id="@+id/rightConstraint"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@color/white"
         android:layout_marginEnd="@dimen/dp_10"
+        android:background="@color/white"
         app:layout_constraintBottom_toBottomOf="@id/leftConstraint"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/verticalGuideline"
@@ -55,8 +62,10 @@
         android:id="@+id/videoProgressBar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_0_1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:visibility="gone"/>
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
+
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_0_5"
